@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2023 The Thingsboard Authors
+ * Copyright © 2016-2024 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -33,6 +33,7 @@ import org.thingsboard.server.common.data.kv.BaseReadTsKvQuery;
 import org.thingsboard.server.common.data.kv.BasicTsKvEntry;
 import org.thingsboard.server.common.data.kv.BooleanDataEntry;
 import org.thingsboard.server.common.data.kv.DoubleDataEntry;
+import org.thingsboard.server.common.data.kv.JsonDataEntry;
 import org.thingsboard.server.common.data.kv.KvEntry;
 import org.thingsboard.server.common.data.kv.LongDataEntry;
 import org.thingsboard.server.common.data.kv.ReadTsKvQuery;
@@ -47,6 +48,7 @@ import org.thingsboard.server.dao.timeseries.TimeseriesService;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
@@ -54,7 +56,9 @@ import java.util.concurrent.TimeoutException;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 
 /**
  * @author Andrew Shvayka
@@ -64,12 +68,12 @@ import static org.junit.Assert.assertNotNull;
 public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
     @Autowired
-    TimeseriesService tsService;
+    protected TimeseriesService tsService;
 
     @Autowired
     EntityViewService entityViewService;
 
-    static final int MAX_TIMEOUT = 30;
+    protected static final int MAX_TIMEOUT = 30;
 
     private static final String STRING_KEY = "stringKey";
     private static final String LONG_KEY = "longKey";
@@ -84,7 +88,7 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
     KvEntry doubleKvEntry = new DoubleDataEntry(DOUBLE_KEY, Double.MAX_VALUE);
     KvEntry booleanKvEntry = new BooleanDataEntry(BOOLEAN_KEY, Boolean.TRUE);
 
-    private TenantId tenantId;
+    protected TenantId tenantId;
 
     @Before
     public void before() {
@@ -116,18 +120,18 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
 
         assertNotNull(tsList);
         assertEquals(4, tsList.size());
-        for (int i = 0; i < tsList.size(); i++) {
-            assertEquals(TS, tsList.get(i).getTs());
+        for (TsKvEntry entry : tsList) {
+            assertEquals(TS, entry.getTs());
         }
 
-        Collections.sort(tsList, (o1, o2) -> o1.getKey().compareTo(o2.getKey()));
+        Collections.sort(tsList, Comparator.comparing(KvEntry::getKey));
 
         List<TsKvEntry> expected = Arrays.asList(
                 toTsEntry(TS, stringKvEntry),
                 toTsEntry(TS, longKvEntry),
                 toTsEntry(TS, doubleKvEntry),
                 toTsEntry(TS, booleanKvEntry));
-        Collections.sort(expected, (o1, o2) -> o1.getKey().compareTo(o2.getKey()));
+        Collections.sort(expected, Comparator.comparing(KvEntry::getKey));
 
         assertEquals(expected, tsList);
     }
@@ -187,7 +191,7 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
         Assert.assertEquals(toTsEntry(TS - 2, stringKvEntry), entries.get(1));
         Assert.assertEquals(toTsEntry(TS - 1, stringKvEntry), entries.get(2));
 
-        EntityView entityView = saveAndCreateEntityView(deviceId, Arrays.asList(STRING_KEY));
+        EntityView entityView = saveAndCreateEntityView(deviceId, List.of(STRING_KEY));
 
         entries = tsService.findAll(tenantId, entityView.getId(), queries).get(MAX_TIMEOUT, TimeUnit.SECONDS);
         Assert.assertEquals(3, entries.size());
@@ -347,7 +351,7 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
         Assert.assertEquals(toTsEntry(TS - 2, stringKvEntry), entries.get(1));
         Assert.assertEquals(toTsEntry(TS - 3, stringKvEntry), entries.get(2));
 
-        EntityView entityView = saveAndCreateEntityView(deviceId, Arrays.asList(STRING_KEY));
+        EntityView entityView = saveAndCreateEntityView(deviceId, List.of(STRING_KEY));
 
         entries = tsService.findAll(tenantId, entityView.getId(), queries).get(MAX_TIMEOUT, TimeUnit.SECONDS);
         Assert.assertEquals(3, entries.size());
@@ -673,6 +677,32 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
         assertEquals(3, list.size());
     }
 
+    @Test
+    public void shouldSaveEntryOfEachType() throws Exception {
+        BasicTsKvEntry booleanEntry = new BasicTsKvEntry(TimeUnit.MINUTES.toMillis(1), new BooleanDataEntry("test", true));
+        BasicTsKvEntry stringEntry = new BasicTsKvEntry(TimeUnit.MINUTES.toMillis(2), new StringDataEntry("test", "text"));
+        BasicTsKvEntry longEntry = new BasicTsKvEntry(TimeUnit.MINUTES.toMillis(3), new LongDataEntry("test", 15L));
+        BasicTsKvEntry doubleEntry = new BasicTsKvEntry(TimeUnit.MINUTES.toMillis(4), new DoubleDataEntry("test", 10.5));
+        BasicTsKvEntry jsonEntry = new BasicTsKvEntry(TimeUnit.MINUTES.toMillis(5), new JsonDataEntry("test", "{\"test\":\"testValue\"}"));
+        List<TsKvEntry> timeseries = List.of(booleanEntry, stringEntry, longEntry, doubleEntry, jsonEntry);
+
+        DeviceId deviceId = new DeviceId(Uuids.timeBased());
+        for (TsKvEntry tsKvEntry : timeseries) {
+            save(tenantId, deviceId, tsKvEntry);
+        }
+
+        List<TsKvEntry> listUntil3Minutes = tsService.findAll(tenantId, deviceId, Collections.singletonList(new BaseReadTsKvQuery("test", 0L,
+                TimeUnit.MINUTES.toMillis(3), 1000, 10, Aggregation.NONE))).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+        assertEquals(2, listUntil3Minutes.size());
+        assertThat(listUntil3Minutes).containsOnlyOnceElementsOf(List.of(
+                booleanEntry, stringEntry));
+
+        List<TsKvEntry> fullList = tsService.findAll(tenantId, deviceId, Collections.singletonList(new BaseReadTsKvQuery("test", 0L,
+                TimeUnit.MINUTES.toMillis(6), 1000, 10, Aggregation.NONE))).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+        assertEquals(5, fullList.size());
+        assertThat(fullList).containsOnlyOnceElementsOf(timeseries);
+    }
+
     private TsKvEntry save(DeviceId deviceId, long ts, long value) throws Exception {
         TsKvEntry entry = new BasicTsKvEntry(ts, new LongDataEntry(LONG_KEY, value));
         tsService.save(tenantId, deviceId, entry).get(MAX_TIMEOUT, TimeUnit.SECONDS);
@@ -691,6 +721,9 @@ public abstract class BaseTimeseriesServiceTest extends AbstractServiceTest {
         return entry;
     }
 
+    private void save(TenantId tenantId, DeviceId deviceId, TsKvEntry tsKvEntry) throws Exception {
+        tsService.save(tenantId, deviceId, tsKvEntry).get(MAX_TIMEOUT, TimeUnit.SECONDS);
+    }
 
     private void saveEntries(DeviceId deviceId, long ts) throws ExecutionException, InterruptedException, TimeoutException {
         tsService.save(tenantId, deviceId, toTsEntry(ts, stringKvEntry)).get(MAX_TIMEOUT, TimeUnit.SECONDS);
